--- a/application/admin/view/money/index.html
+++ b/application/admin/view/money/index.html
@@ -3,8 +3,8 @@
 {include file='layout/head' /}
 
 <body>
-	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 文章管理 <span
-			class="c-gray en">&gt;</span> 提现审核列表 <a class="btn btn-success radius r replace"
+	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 资金管理 <span
+			class="c-gray en">&gt;</span> 提现申请记录 <a class="btn btn-success radius r replace"
 			style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 	<div class="page-container">
@@ -13,7 +13,7 @@
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
-					<th scope="col" colspan="14">提现审核列表</th>
+					<th scope="col" colspan="14">提现申请记录</th>
 				</tr>
 				<tr class="text-c">
                     <th width="40">ID</th>
