--- a/application/admin/view/money/recharge.html
+++ b/application/admin/view/money/recharge.html
@@ -43,13 +43,13 @@
             <table class="table table-border table-bordered table-hover table-bg table-sort">
                 <thead>
                     <tr class="text-c">
-                        <th width="80">ID</th>
-                        <th width="150">会员名</th>
-                        <th width="130">充值金额</th>
-                        <th width="150">说明</th>
-                        <th width="110">附加数据</th>
-                        <th width="120">充值时间</th>
-                        <th width="60">发起交易时间</th>
+                        <th width="40">ID</th>
+                        <th width="100">会员名</th>
+                        <th width="80">充值金额</th>
+                        <!-- <th width="150">说明</th>
+                        <th width="110">附加数据</th> -->
+                        <th width="100">充值时间</th>
+                        <th width="100">发起交易时间</th>
                         <th width="70">交易平台</th>
                         <th width="70">状态</th>
                     </tr>
@@ -61,8 +61,8 @@
                         <td>{$vo.id}</td>
                         <td>{$vo.nickname}</td>
                         <td>{$vo.money}</td>
-                        <td>{$vo.body}</td>
-                        <td>{$vo.attach}</td>
+                        <!-- <td>{$vo.body}</td>
+                        <td>{$vo.attach}</td> -->
                         <td>{:date('Y-m-d,H:i:s',$vo.addtime)}</td>
                         <td>{:date('Y-m-d,H:i:s',$vo.init_time)}</td>
                         <td>{$vo.platform}</td>
