修复：手机端提交订单页面点击设置支付密码没有跳转的错误

--- a/application/mobile/view/goods/check_order.html
+++ b/application/mobile/view/goods/check_order.html
@@ -92,7 +92,7 @@
                         {if condition="$user.payment_password"}
                             <input type="password" id="paypass" value="" class="pwdnum" placeholder="请输入支付密码" autocomplete/>
                         {else /}
-                            <a style="color:red;">请先设置支付密码</a>
+                            <a style="color:red;" href="/mobile/index/edit_paypass">请先设置支付密码</a>
                         {/if}
                         </div>  
                  </div>
