--- a/application/admin/view/index/welcome.html
+++ b/application/admin/view/index/welcome.html
@@ -23,10 +23,9 @@
 </head>
 <body>
 <div class="page-container">
-	<p class="f-20 text-success">欢迎使用H-ui.admin <span class="f-14">v3.1</span>后台模版！</p>
-	<p>登录次数：18 </p>
-	<p>上次登录IP：222.35.131.79.1  上次登录时间：2014-6-14 11:19:55</p>
-	<table class="table table-border table-bordered table-bg">
+	<p class="f-20 text-success">{$title} </p>
+	<p>{$greetings}</p>
+	<!-- <table class="table table-border table-bordered table-bg">
 		<thead>
 			<tr>
 				<th colspan="7" scope="col">信息统计</th>
@@ -82,8 +81,8 @@
 				<td>0</td>
 			</tr>
 		</tbody>
-	</table>
-	<table class="table table-border table-bordered table-bg mt-20">
+	</table> -->
+	<!-- <table class="table table-border table-bordered table-bg mt-20">
 		<thead>
 			<tr>
 				<th colspan="2" scope="col">服务器信息</th>
@@ -183,16 +182,16 @@
 				<td>NETWORK SERVICE</td>
 			</tr>
 		</tbody>
-	</table>
+	</table> -->
 </div>
-<footer class="footer mt-20">
+<!-- <footer class="footer mt-20">
 	<div class="container">
 		<p>感谢jQuery、layer、laypage、Validform、UEditor、My97DatePicker、iconfont、Datatables、WebUploaded、icheck、highcharts、bootstrap-Switch<br>
 			Copyright &copy;2015-2017 H-ui.admin v3.1 All Rights Reserved.<br>
 			本后台系统由<a href="http://www.h-ui.net/" target="_blank" title="H-ui前端框架">H-ui前端框架</a>提供前端技术支持</p>
 			<p>More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
 	</div>
-</footer>
+</footer> -->
 <script type="text/javascript" src="__HOST__/lib/jquery/1.9.1/jquery.min.js"></script> 
 <script type="text/javascript" src="__HOST__/h-ui/js/H-ui.min.js"></script> 
 
