--- a/application/admin/view/admin/add.html
+++ b/application/admin/view/admin/add.html
@@ -136,6 +136,7 @@ $(function(){
 				
 					if (data.status == 1) {
 						layer.msg(data.msg,{icon: 1,time: 1000},function () {
+							console.log('aaaa')
 							parent.location.reload()
 							// var index = parent.layer.getFrameIndex(window.name);
 							// parent.$('.btn-refresh').click();
