修复：切换提现账号类型时，相应图片没有变化的问题

--- a/application/mobile/view/user/withdrawal.html
+++ b/application/mobile/view/user/withdrawal.html
@@ -167,6 +167,7 @@
 					}
 					$(".img2").attr("src", "__STATIC__/img/my/weixuanzhong@2x.png");
 					$(".img1").attr("src","__STATIC__/img/my/xuanzhong@2x.png");
+					$(".img33").attr("src","__STATIC__/img/my/zhifubao@2x.png");
 					$('#withdrawal-type').val('alipay');
 					$('#bangding').html(account);
 				}
@@ -183,6 +184,7 @@
 					}
 					$(".img1").attr("src","__STATIC__/img/my/weixuanzhong@2x.png");
 					$(".img2").attr("src","__STATIC__/img/my/xuanzhong@2x.png");
+					$(".img33").attr("src","__STATIC__/img/my/weixin@2x.png");
 					$('#bangding').attr('data-type','weixin');
 					$('#withdrawal-type').val('weixin');
 					$('#bangding').html(account);
