--- a/application/mobile/view/goods/check_order.html
+++ b/application/mobile/view/goods/check_order.html
@@ -53,7 +53,7 @@
                            <span class="name">{$info.name}</span>
                        </div>
                        <div class="item-price">
-                           <p class="price">￥{$info.price}</p>
+                           <p class="price price2">￥{$info.price}</p>
                            <p class="num">x1</p>
                        </div>
                  </div>
@@ -61,7 +61,7 @@
                       <span> 购买数量</span>
                       <div class="quantity">
                         <a href="javascript:void(0);" class="subtract">-</a>
-                        <input type="number" id="number" class="num" value="1" max="100" min="1" disabled/>
+                        <input type="number" id="number" class="num num2" value="1" max="100" min="1" disabled/>
                         <a href="javascript:void(0);" class="add">+</a>
                       </div>
                  </div>
@@ -77,7 +77,7 @@
                     <div class="ksps">使用余额</div>
                     <div class="select difference">
                         <!-- 未选中 -->
-                        <img src="__STATIC__/img/purchase/Button-box@2x.png" alt="" >
+                        <img src="__STATIC__/img/purchase/Button-box@2x.png" alt="" class="yuer" >
                         <!-- 已选中 -->
                         <!-- <img src="__STATIC__/img/purchase/button@2x.png" alt=""> -->
                     </div>
@@ -96,6 +96,9 @@
                         {/if}
                         </div>  
                  </div>
+
+                 <input type="text" id="quoto" value="{$my_coupon[0]['quota']}" >
+                 <input type="text" id="money" value="{$my_coupon[0]['money']}" >
              </div>
                 <!-- discount coupon -->
              <div class="coupon">
@@ -122,13 +125,13 @@
                  <div class="favourable_item">
                      <div class="item_name">邮费:</div>
                      <div>
-                         ￥ <span class="postage">{$freight}</span>
+                         ￥ <span class="postage postage2">{$freight}</span>
                      </div>
                  </div>
                  <div class="favourable_item">
                      <div class="item_name">优惠券折扣:</div>
                         <div>
-                            -￥ <span class="coupon_discount">0.00</span>
+                            -￥ <span class="coupon_discount coupon_discount2">0.00</span>
                      </div>
                  </div>
                  <div class="favourable_item">
