修改html页面,后台基因库会员名查询错误!

--- a/application/mobile/view/user/my_order.html
+++ b/application/mobile/view/user/my_order.html
@@ -56,12 +56,14 @@
 										-->
 										{if condition="$vo.order_status eq 0"}
 										<p class="commodity_term_but button_red" onclick="javascript:location.href='/mobile/weixin/pay?t=order_pay&id={$vo.id}'">付款</p>
-										<!-- <p class="commodity_term_but button_ash">取消订单</p> -->
+										{/if}
+										{if condition="$vo.order_status eq 2"}
+										<p class="commodity_term_but button_red" onclick="confirm_order('{$vo.id}')">确认收货</p>
 										{/if}
 										{if condition="$vo.order_status eq 3"}
 										<p class="commodity_term_but button_red" onclick="error_msg('敬请期待！');">评价</p>
-										<!-- <p class="commodity_term_but button_ash">取消订单</p> -->
 										{/if}
+										<!-- <p class="commodity_term_but button_ash">取消订单</p> -->
 									</div>
 								</div>
 
@@ -81,6 +83,30 @@
 		<script>
 			function error_msg(msg){
 				layer.msg(msg,{icon:6});
+			}
+			
+			function confirm_order(id){
+			
+				layer.confirm('确认已收货? ', {icon: 3, title:'提示'}, function(index){
+				  //do something
+				  
+				  $.post('/mobile/user/confirm_order',{id:id},function(res){
+					if(res.status == 1){
+						layer.msg('已确认收货!',{icon:6});
+					}else{
+						layer.msg('操作失败,请重试!',{icon:5});
+					}
+					
+					setTimeout(function(){
+						window.location.replace(location.href);
+					},1500);
+				  });
+				  
+				  
+				  layer.close(index);
+				});
+			
+			
 			}
 		</script>
 	</body>
