--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -24,13 +24,13 @@
         <div class="content inner-wrap">
             <div class="gene-data">
                 <h2>导入基因数据</h2>
-                <form action="###">
+                <form action="" target="ajaxR" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="groupl">
                             姓名：
                         </div>
                         <div class="groupr">
-                            <input type="text" class="fullName">
+                            <input type="text" name="name" class="fullName">
                         </div>
                     </div>
 
@@ -40,11 +40,11 @@
                         </div>
                         <div class="groupr">
                             <div class="sexItem">
-                                <input type="radio" name="sex" id="man">
+                                <input type="radio" name="sex" id="man" value="1" checked>
                                 <label for="man">男</label>
                             </div>
                             <div class="sexItem">
-                                <input type="radio" name="sex" id="woman" >
+                                <input type="radio" name="sex" id="woman" value="2" >
                                 <label for="woman">女</label>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                                 <select name="month" id="month">
                                     <option value="">选择月份</option>
                                 </select>
-                                <select id="days" class="day" style="margin-right:0;">
+                                <select id="days" name="day" class="day" style="margin-right:0;">
                                     <option value="">选择日期</option>
                                 </select>
                             </div>
@@ -73,13 +73,13 @@
                             文件：
                         </div>
                         <div class="groupr upload">
-                            <a href="javascript:void(0)">点击选择压缩文件</a>
-                            <input type="file" class="selectFile">
+                            <a href="javascript:void(0)" id="filename">点击选择.ZIP压缩文件</a>
+                            <input type="file" id="file" name="file" class="selectFile">
                             <p class="tips">请直接上传您从测序厂商获取的原始.Zip文件</p>
                         </div>
                     </div>
                     <div class="btn">
-                        <button type="button">确认</button>
+                        <button type="submit">确认</button>
                     </div>
                 </form>
             </div>
@@ -89,10 +89,11 @@
         <div class="footer"></div>
         
     </div>  
-
+    <iframe name="ajaxR" style="display:block;width:100%;height:500px;"></iframe>
     <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
     <script src="__STATIC__/js/public/footer.js"></script>
     <script src="__STATIC__/js/public/selectDate.js"></script>
+	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
     <script>
     	$(function(){
 			$("#date").selectDate()
@@ -101,10 +102,33 @@
 				var year = $("#year option:selected").html()
 				var month = $("#month option:selected").html()
 				var day = $("#days option:selected").html()
-				console.log(year+month+day)
 			})
 			
+            $('#file').on('change',function(){
+                var file = $("#file").val();
+                var fileName = getFileName(file);
+                $('#filename').html(fileName);
+            });
         })
+        
+        function success(){
+            layer.msg('基因数据导入成功！正在刷新页面...',{icon:6});
+            setTimeout(function(){
+                window.location.replace(location.href);
+            },2000);
+        }
+  
+        function getFileName(o){
+            var pos=o.lastIndexOf("\\");
+            var fileName = o.substring(pos+1);
+            var p = /(?:\.zip|\.ZIP)$/;
+            if(!p.test(fileName)){
+                $("#file").val('');
+                layer.msg('请选择.ZIP类型的压缩文件',{icon:5});
+                return '点击选择.ZIP压缩文件';
+            }
+            return fileName;
+        }
         </script>
 </body>
 </html>
