--- a/application/admin/view/system/add_menu.html
+++ b/application/admin/view/system/add_menu.html
@@ -37,6 +37,12 @@
             </div>
         </div>
         <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3">排序值：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" autocomplete="off" value="{if condition="isset($info)"}{$info.sort}{/if}" name="sort" id="sort">
+            </div>
+        </div>
+        <div class="row cl">
             <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>显示：</label>
             <div class="formControls col-xs-8 col-sm-9 skin-minimal">
                 <div class="radio-box">
@@ -65,6 +71,7 @@
         var icon = $('#icon').val();
         var url = $('#url').val();
         var is_lock = $('input[name=is_lock]:checked').val();
+        var sort = $('#sort').val();
 
         if(!name){
             layer.msg('请填写菜单名称');
@@ -75,8 +82,8 @@
             return false;
         }
 
-        $.post("/admin/system/add_menu",{menu_id:menu_id,parent_id:parent_id,name:name,icon:icon,url:url,is_lock:is_lock},function(res){
-
+        $.post("/admin/system/add_menu",{menu_id:menu_id,parent_id:parent_id,name:name,icon:icon,url:url,is_lock:is_lock,sort:sort},function(res){
+            
             if(res){
                 var res = JSON.parse(res);
                 if(res.status == 1){
