--- a/application/admin/view/layout/header.html
+++ b/application/admin/view/layout/header.html
@@ -27,8 +27,8 @@
                 <li class="dropDown dropDown_hover">
                     <a href="#" class="dropDown_A">{$admin_info['name']} <i class="Hui-iconfont">&#xe6d5;</i></a>
                     <ul class="dropDown-menu menu radius box-shadow">
-                        <li><a href="javascript:;" onClick="myselfinfo()">个人信息</a></li>
-                        <li><a href="#">切换账户</a></li>
+                        <!-- <li><a href="javascript:;" onClick="myselfinfo()">个人信息</a></li>
+                        <li><a href="#">切换账户</a></li> -->
                         <li><a href="{:url('admin/logout')}">退出</a></li>
                     </ul>
                 </li>
