--- a/application/admin/view/system/menu.html
+++ b/application/admin/view/system/menu.html
@@ -28,6 +28,7 @@
 				<tr class="text-c">
 					<th width="40">ID</th>
 					<th width="150">菜单名称</th>
+					<th width="150">菜单地址</th>
 					<th width="130">加入时间</th>
 					<th width="100">排序值</th>
 					<th width="100">状态</th>
@@ -46,6 +47,7 @@
 							{default/}{$vo.name}
 						{/switch}
 					</td>
+					<td>{$vo.url ? $vo.url : '--'}</td>
 					<td>{$vo.addtime|date="Y-m-d H:i:s",###}</td>
 					<td>{$vo.sort}</td>
                     <td class="td-status">
