增加：未支付的订单取消功能；修改：账单明细，类目 订单 -> 编号

--- a/application/mobile/view/goods/check_order.html
+++ b/application/mobile/view/goods/check_order.html
@@ -97,8 +97,8 @@
                         </div>  
                  </div>
 
-                 <input type="text" id="quoto" value="{$my_coupon[0]['quota']}" hidden>
-                 <input type="text" id="money" value="{$my_coupon[0]['money']}" hidden>
+                 <input type="text" id="quoto" value="{$my_coupon[0]['quota'] ? $my_coupon[0]['quota'] : 0}" hidden>
+                 <input type="text" id="money" value="{$my_coupon[0]['money'] ? $my_coupon[0]['money'] : 0}" hidden>
              </div>
                 <!-- discount coupon -->
              <div class="coupon">
