修改页面样式

--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -21,11 +21,12 @@
 
 				<!-- 搜索 -->
 				<div class="search">
-					<form action="#">
+					<p style="text-align: center;heigit:0.88rem;line-height: 0.88rem;color:#fff;font-size: 16px;">首页</p>
+					<!-- <form action="#">
 						<input class="search-input" type="text">
 						<button class="search-btn">搜索</button>
 						<span class="search-tip">搜索</span>
-					</form>
+					</form> -->
 				</div>
 				<!-- 轮播图 -->
 				<div class="swiper-container banner-wrap-zp">
