--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -73,9 +73,9 @@
                             文件：
                         </div>
                         <div class="groupr upload">
-                            <a href="javascript:void(0)" id="filename">点击选择.ZIP压缩文件</a>
+                            <a href="javascript:void(0)" id="filename">点击选择文件</a>
                             <input type="file" id="file" name="file" class="selectFile">
-                            <p class="tips">请直接上传您从测序厂商获取的原始.Zip文件</p>
+                            <p class="tips">请直接上传您从测序厂商获取的原始文件，支持 .ZIP .RAR .XLS .XLSX 格式</p>
                         </div>
                     </div>
                     <div class="btn">
@@ -121,11 +121,11 @@
         function getFileName(o){
             var pos=o.lastIndexOf("\\");
             var fileName = o.substring(pos+1);
-            var p = /(?:\.zip|\.ZIP)$/;
+            var p = /(?:\.zip|\.rar|\.xls|\.xlsx)$/;
             if(!p.test(fileName)){
                 $("#file").val('');
-                layer.msg('请选择.ZIP类型的压缩文件',{icon:5});
-                return '点击选择.ZIP压缩文件';
+                layer.msg('请选择.ZIP .RAR .XLS .XLSX类型的文件',{icon:5});
+                return '点击选择文件';
             }
             return fileName;
         }
