--- a/application/mobile/view/index/login.html
+++ b/application/mobile/view/index/login.html
@@ -18,7 +18,7 @@
 		<div class="wrap_frame">
 			<!--public head-->
 			<div class="lb_headWrap" style="background-color: #fff;">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/return_icon.png"/>
 				</p>
 			</div>
