修改数据导入样式及存储目录

--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -69,15 +69,17 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="groupl">
+                        <div class="groupl" style="display:inline-block;">
                             文件：
                         </div>
-                        <div class="groupr upload">
+                        <div class="groupr upload" style="display:inline-block;">
                             <a href="javascript:void(0)" id="filename">点击选择文件</a>
-                            <input type="file" id="file" name="file" class="selectFile">
-                            <p class="tips">请直接上传您从测序厂商获取的原始文件，支持 .ZIP .RAR .XLS .XLSX 格式</p>
+                            <input type="file" id="file" name="file" class="selectFile" >
+                           
                         </div>
+                       
                     </div>
+                    <p class="tips">请直接上传您从测序厂商获取的原始文件，支持 .ZIP .RAR .XLS .XLSX 格式</p>
                     <div class="btn">
                         <button type="submit">确认</button>
                     </div>
