--- a/public/static/index/css/home/import_data.css
+++ b/public/static/index/css/home/import_data.css
@@ -6,12 +6,13 @@
     position: relative;
 }
 .gene-data{
-    width: 500px;
+    width: 550px;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
     z-index: 1;
+  
 }
 .gene-data h2{
     text-align: center;
@@ -26,6 +27,7 @@
 .gene-data .form-group .groupl{
     float: left;
     line-height: 38px;
+    display: inline-block
 }
 .gene-data .form-group .groupr{
     float: left;
@@ -86,14 +88,14 @@
 
 }
 .gene-data .upload .selectFile{
-    width: 400px;
+    width: 450px;
     height: 40px;
     opacity: 0;
     position: absolute;
     left: 0;
     top: 0;
 }
-.gene-data .upload .tips{
+.tips{
     color: #999999;
     font-size: 14px;
     line-height: 34px;
@@ -114,4 +116,11 @@
     background-color: #37afe6;
     border-radius: 8px;
     border: none;
+}
+#filename{
+
+   width: 450px;
+   display: inline-block
+
+
 }
