--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -91,7 +91,7 @@
         <div class="footer"></div>
         
     </div>  
-    <iframe name="ajaxR" style="display:block;width:100%;height:500px;"></iframe>
+    <iframe name="ajaxR" style="display:none;width:100%;height:500px;"></iframe>
     <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
     <script src="__STATIC__/js/public/footer.js"></script>
     <script src="__STATIC__/js/public/selectDate.js"></script>
