--- a/public/static/index/css/home/import_data.css
+++ b/public/static/index/css/home/import_data.css
@@ -6,13 +6,12 @@
     position: relative;
 }
 .gene-data{
-    width: 550px;
+    width: 500px;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
     z-index: 1;
-  
 }
 .gene-data h2{
     text-align: center;
@@ -27,7 +26,6 @@
 .gene-data .form-group .groupl{
     float: left;
     line-height: 38px;
-    display: inline-block
 }
 .gene-data .form-group .groupr{
     float: left;
@@ -64,7 +62,7 @@
 .gene-data .upload{
     position: relative;
 }
-.gene-data .upload a{
+.check_zip{
     width: 400px;
     height: 40px;
     line-height: 40px;
@@ -78,6 +76,14 @@
     
     
 }
+.downloadss{
+	
+	
+	float: right;
+	margin-bottom: .5rem;
+	
+	
+}
 .cuo_pic,.dui_pic{
 	
 	display: inline-block;
@@ -88,14 +94,14 @@
 
 }
 .gene-data .upload .selectFile{
-    width: 450px;
+    width: 400px;
     height: 40px;
     opacity: 0;
     position: absolute;
     left: 0;
     top: 0;
 }
-.tips{
+.gene-data .upload .tips{
     color: #999999;
     font-size: 14px;
     line-height: 34px;
@@ -116,11 +122,4 @@
     background-color: #37afe6;
     border-radius: 8px;
     border: none;
-}
-#filename{
-
-   width: 450px;
-   display: inline-block
-
-
 }
