web：修改基因数据上传，增加；特定格式模板数据直接导入功能

--- a/application/index/view/index/online_import_data.html
+++ b/application/index/view/index/online_import_data.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <!-- 头部 -->
-        <div class="header"></div>
+        <div class="header">{include file="header"}</div>
        
            <!-- 内容 -->
           <div class="content inner-wrap">
